tests/snapshots/s1_health_gates__gates_empty_snapshot.snap
---
source: tests/s1_health_gates.rs
assertion_line: 103
expression: gates
---
[
    Gate {
        label: "API reachable",
        status: Unknown,
        value: "loading…",
        why: None,
    },
    Gate {
        label: "Chain RPC",
        status: Unknown,
        value: "—",
        why: None,
    },
    Gate {
        label: "Wallet funded",
        status: Unknown,
        value: "—",
        why: None,
    },
    Gate {
        label: "Warmup complete",
        status: Unknown,
        value: "—",
        why: None,
    },
    Gate {
        label: "Peers",
        status: Unknown,
        value: "—",
        why: None,
    },
    Gate {
        label: "Reserve",
        status: Unknown,
        value: "—",
        why: None,
    },
    Gate {
        label: "Bin saturation",
        status: Unknown,
        value: "—",
        why: None,
    },
    Gate {
        label: "Healthy for redistribution",
        status: Unknown,
        value: "—",
        why: None,
    },
    Gate {
        label: "Not frozen",
        status: Unknown,
        value: "—",
        why: None,
    },
    Gate {
        label: "Sufficient funds to play",
        status: Unknown,
        value: "—",
        why: None,
    },
]
